<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IP_Question_Display_Summary"
    android:fitsSystemWindows="true"
    android:id="@+id/layout_drawer"
    android:background="#b6e1df">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            layout="@layout/nav_toolbar"
            android:id="@+id/toolbar"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/toolbar"
            android:id="@+id/text">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@android:color/holo_red_dark"
                android:text="Playback-Summary of Your Responses"
                />

        </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"

                android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="400dp"
               >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical">



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="My Issue or problem is:"/>
                <TextView
                    android:id="@+id/playback_text_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />




                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Where is this issue on a scale of 1 – 10.  Where 10 is Death and 1 is ‘you have just spilt some tap water at home:"/>
                <TextView
                    android:id="@+id/playback_text_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />




                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Using the same scale, where will this issue be when you look back on it in 6 months time?"/>
                <TextView
                    android:id="@+id/playback_text_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />








                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Play_Back_Summary_1"/>
                    <TextView
                        android:id="@+id/playback_text_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />







                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Play_Back_Summary_2"/>
                    <TextView
                        android:id="@+id/playback_text_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />







                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Play_Back_Summary_3"/>
                    <TextView
                        android:id="@+id/playback_text_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />





                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Play_Back_Summary_4"/>
                    <TextView
                        android:id="@+id/playback_text_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <TextView
                        android:id="@+id/playback_text_7_part_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />





                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Play_Back_Summary_5"/>
                    <TextView
                        android:id="@+id/playback_text_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />








                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Play_Back_Summary_6"/>
                    <TextView
                        android:id="@+id/playback_text_9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />






                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Play_Back_Summary_7"/>
                    <TextView
                        android:id="@+id/playback_text_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />




                    <TextView
                        android:layout_marginTop="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Play_Back_Summary_8"/>
                    <TextView
                        android:id="@+id/playback_text_11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />

                </LinearLayout>










            </ScrollView>

            </LinearLayout>

                </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="590dp"
                android:background="@drawable/button_shape"
                android:layout_marginRight="80dp"
                android:layout_marginLeft="80dp"
                android:layout_marginBottom="30dp"
                android:text="HOME"
                android:textSize="20dp"
                android:onClick="btn_home"
                android:textColor="#84c2c8"/>














    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_drawer"
        app:menu="@menu/toolbar_nav_drawer"
        />

</androidx.drawerlayout.widget.DrawerLayout>